# weather-report

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  docker-compose.yml  rust-toolchain.toml
api/: Cargo.toml  Dockerfile
api/src/: dynamodb.rs  main.rs  repository.rs  sensor_dto.rs
cassandra/: initdb.cql
crates/sensor/: Cargo.toml
crates/sensor/src/: lib.rs  repository.rs  sensor.rs
crates/sensor/src/sensor/: location.rs  measurements.rs  season.rs  sensor_id.rs  status.rs
crates/sensor/src/sensor/location/: area.rs  latitude.rs  longitude.rs
crates/sensor/src/sensor/measurements/: humidity.rs  temperature.rs
crates/sensor_consumer/: Cargo.toml  Dockerfile
crates/sensor_consumer/src/: cassandra.rs  dynamodb.rs  kafka.rs  main.rs  sensor.rs
crates/sensor_simulator/: Cargo.toml  Dockerfile
crates/sensor_simulator/src/: lib.rs  main.rs  sensor.rs
crates/sensor_simulator/src/kafka/: producer.rs
crates/sensor_simulator/src/sensor/: location.rs  measurements.rs  season.rs  sensor_id.rs  status.rs
crates/sensor_simulator/src/sensor/location/: area.rs  latitude.rs  longitude.rs
crates/sensor_simulator/src/sensor/measurements/: humidity.rs  temperature.rs
scripts/: exec_cassandra.sh  init.cassandra.sh  init.dynamodb.sh
sensor_simulator/: Cargo.toml
sensor_simulator/src/: sensor.rs
sensor_simulator/src/sensor/: sensor_id.rs
web/: Dockerfile  biome.json  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/dashboard/: page.tsx
web/src/atoms/: areaAtom.ts
web/src/components/: Header.tsx  Sidebar.tsx
web/src/components/charts/: timeChart.tsx
web/src/components/dashboard/: alert.tsx  currentboard.tsx  measurements.tsx  status.tsx
web/src/hooks/: useSensor.ts
web/src/lib/models/aggregate/: temperature.ts
web/src/lib/models/status/: status.ts
web/src/lib/websocket/: socket.ts
web/src/models/aggregate/: aggregate.ts  humidity.ts
web/src/models/area/: area.ts
web/src/models/sensor/: sensor.ts
