[workspace]
resolver = "2"
members = [ "crates/sensor", "crates/sensor_consumer",
  "crates/sensor_simulator"
]

[workspace.dependencies]
serde = "1.0.213"
serde_json = "1.0.132"
anyhow = "1.0.90"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.65"
rand = "0.8"
rdkafka  = "0.37.0"
futures = "0.3"
env_logger = "0.10"
cassandra-cpp = "0.16.0"

aws-config = { version = "1.5.10", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.53.0"
