[package]
name = "api"
version = "0.1.0"
edition = "2021"

[features]
default = []
not_docker = ["rand"]

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }

sensor = { path = "../crates/sensor" }

rand = { workspace = true, optional = true }
