[package]
name = "sensor_consumer"
version = "0.1.0"
edition = "2021"

[features]
default = []  
with_cassandra = ["cassandra-cpp"]

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
rdkafka = { workspace = true } 
anyhow = { workspace = true }
serde = { workspace = true } 
serde_json = { workspace = true }
futures = { workspace = true }
env_logger = { workspace = true }
cassandra-cpp = { workspace = true, optional = true }

aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
