[package]
name = "sensor_simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
rdkafka = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true } 
serde_json = { workspace = true }
